<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="600dp"
    android:layout_gravity="center"
    android:background="@color/white"
    android:orientation="vertical"
    >
    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:id="@+id/PB_backBtn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:drawableLeft="@drawable/baseline_arrow_back_ios_black_18"
            android:background="@color/transparent"
            />
    </LinearLayout>
    <TextView
        style="@style/textBlack"
        android:id="@+id/PB_showLabel"
        android:text="Thêm phòng ban"
        android:background="#2A91E1"
        android:layout_width="match_parent"
        android:textAllCaps="true"
        android:textSize="24dp"
        android:gravity="center|center_vertical"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/textBlack"
            android:text="@string/ma_pb"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/PB_inputMaPB"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            style="@style/textRed"
            android:id="@+id/PB_showMPBError"
            android:visibility="invisible"
            android:layout_width="match_parent"
            android:text="@string/error_of_this_line"
            android:gravity="center"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/textBlack"
            android:text="@string/ten_pb"
            android:padding="10dp"
            />
        <EditText
            android:id="@+id/PB_inputTenPB"
            android:paddingLeft="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
        <TextView
            style="@style/textRed"
            android:id="@+id/PB_showTPBError"
            android:layout_width="match_parent"
            android:text="@string/error_of_this_line"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/PB_showConfirm"
            style="@style/textBlack"
            android:text="Bạn thực sự muốn tạo mới ?"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="bottom">
        <Button
            style="@style/Btn"
            android:id="@+id/PB_yesInsertBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/yes_color"
            android:text="Đồng ý"/>
        <Button
            android:layout_marginLeft="40dp"
            android:id="@+id/PB_noInsertBtn"
            style="@style/Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/thoatbtn_bgcolor"
            android:text="Hủy"/>
    </LinearLayout>
    <TextView
        android:id="@+id/PB_showResult"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        style="@style/textBlack"
        android:gravity="center"
        android:textColor="@color/yes_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Thêm mới thành công"
        />
</LinearLayout>